--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,5 @@
 2008-09-01 
   * Started to log history
-  * Rename Mash to Mhash to avoid merb conflicts
+  * Rename Mash to MHash to avoid merb conflicts
+2009-07-01
+  * back to Mash, merb will be merged with rails and mash should not be a conflict
